Fixed line height incorrectly clipping title.

--- a/assets/styles/theme/embed.less
+++ b/assets/styles/theme/embed.less
@@ -23,7 +23,7 @@
     h1 {
       font-size: 2.4rem;
       font-weight: 200;
-      line-height: 2.5rem;
+      line-height: 3rem;
       margin-right: 30px;
       overflow: hidden;
       white-space: nowrap;
